# mathlib

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  amathlib.h  amlarray.h  amlarrayhead.h  amlcomplex.h  amlcomplexarray.h  amlcomplexarrayhead.h  amlcomplexhead.h  amlla.h  amllahead.h  cudatest.cu  install.sh  main.cpp  multiprecision.h  opencltest.cl  opencltest.cpp  testComplex.cpp  testMP.cpp  vulkantest.cpp
benchmarks/: Makefile  benchmarkUtil.h  complexBenchmark.cpp  emMatrix.cpp  matrixBenchmark.cpp
samples/: CMakeLists.txt  Makefile  mandelbrot.cpp  mandelbrot.cu  mandelbrotn.cpp
